# conan-training-basic-lib2

./: .gitignore  CMakeLists.txt  README.md  build.sh  conan_upload.sh  conanfile.py
conan_profiles/: profile_x86_debug
src/: mul.cpp  mul.h
